--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@typescript-eslint/eslint-plugin": "^6.2.1",
         "@typescript-eslint/parser": "^6.2.1",
         "babel-jest": "^29.6.2",
+        "crypto": "^1.0.1",
         "esbuild": "^0.18.17",
         "eslint": "^8.46.0",
         "eslint-config-airbnb": "^19.0.4",
@@ -43,6 +44,7 @@
         "ncp": "^2.0.0",
         "nodemon": "^3.0.1",
         "prettier": "^3.0.0",
+        "querystring": "^0.2.1",
         "request": "^2.88.2",
         "sass": "^1.64.2",
         "ts-jest": "^29.1.1",
