--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@babel/core": "^7.22.9",
         "@babel/preset-env": "^7.22.9",
         "@types/jest": "^29.5.3",
+        "@types/node": "^20.4.8",
         "@typescript-eslint/eslint-plugin": "^6.2.1",
         "@typescript-eslint/parser": "^6.2.1",
         "babel-jest": "^29.6.2",
